@@ -736,6 +736,15 @@ init|=
 operator|-
 literal|946812319974801896L
 decl_stmt|;
+DECL|field|RESOURCE_NAME
+specifier|private
+specifier|static
+specifier|final
+name|String
+name|RESOURCE_NAME
+init|=
+literal|"resource.name"
+decl_stmt|;
 comment|/**    * User-Agent String.    */
 DECL|field|AGENT
 specifier|public
@@ -1236,10 +1245,6 @@ name|invariantParams
 argument_list|)
 expr_stmt|;
 block|}
-name|params
-operator|=
-name|wparams
-expr_stmt|;
 name|int
 name|tries
 init|=
@@ -1311,7 +1316,7 @@ name|ClientUtils
 operator|.
 name|toQueryString
 argument_list|(
-name|params
+name|wparams
 argument_list|,
 literal|false
 argument_list|)
@@ -1436,7 +1441,7 @@ name|String
 argument_list|>
 name|iter
 init|=
-name|params
+name|wparams
 operator|.
 name|getParameterNamesIterator
 argument_list|()
@@ -1461,7 +1466,7 @@ name|String
 index|[]
 name|vals
 init|=
-name|params
+name|wparams
 operator|.
 name|getParams
 argument_list|(
@@ -1602,6 +1607,45 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+else|else
+block|{
+for|for
+control|(
+name|ContentStream
+name|content
+range|:
+name|streams
+control|)
+block|{
+if|if
+condition|(
+name|content
+operator|.
+name|getName
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|postParams
+operator|.
+name|add
+argument_list|(
+operator|new
+name|BasicNameValuePair
+argument_list|(
+name|RESOURCE_NAME
+argument_list|,
+name|content
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 if|if
 condition|(
 name|parts
@@ -1672,29 +1716,6 @@ block|}
 comment|// It is has one stream, it is the post body, put the params in the URL
 else|else
 block|{
-name|String
-name|pstr
-init|=
-name|ClientUtils
-operator|.
-name|toQueryString
-argument_list|(
-name|params
-argument_list|,
-literal|false
-argument_list|)
-decl_stmt|;
-name|HttpPost
-name|post
-init|=
-operator|new
-name|HttpPost
-argument_list|(
-name|url
-operator|+
-name|pstr
-argument_list|)
-decl_stmt|;
 comment|// Single stream as body
 comment|// Using a loop just to get the first one
 specifier|final
@@ -1725,6 +1746,65 @@ name|content
 expr_stmt|;
 break|break;
 block|}
+if|if
+condition|(
+name|contentStream
+index|[
+literal|0
+index|]
+operator|!=
+literal|null
+operator|&&
+name|contentStream
+index|[
+literal|0
+index|]
+operator|.
+name|getName
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|wparams
+operator|.
+name|set
+argument_list|(
+name|RESOURCE_NAME
+argument_list|,
+name|contentStream
+index|[
+literal|0
+index|]
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|pstr
+init|=
+name|ClientUtils
+operator|.
+name|toQueryString
+argument_list|(
+name|wparams
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|HttpPost
+name|post
+init|=
+operator|new
+name|HttpPost
+argument_list|(
+name|url
+operator|+
+name|pstr
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 name|contentStream
@@ -2869,6 +2949,33 @@ literal|"Client was created outside of HttpSolrServer"
 argument_list|)
 throw|;
 block|}
+block|}
+DECL|method|isUseMultiPartPost
+specifier|public
+name|boolean
+name|isUseMultiPartPost
+parameter_list|()
+block|{
+return|return
+name|useMultiPartPost
+return|;
+block|}
+comment|/**    * Set the multipart connection properties    */
+DECL|method|setUseMultiPartPost
+specifier|public
+name|void
+name|setUseMultiPartPost
+parameter_list|(
+name|boolean
+name|useMultiPartPost
+parameter_list|)
+block|{
+name|this
+operator|.
+name|useMultiPartPost
+operator|=
+name|useMultiPartPost
+expr_stmt|;
 block|}
 block|}
 end_class
